[project]
name = "piisafe"
version = "0.5.0"
description = "Framework-agnostic PII tokenization service for Python web applications"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "anyio>=4.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["piisafe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
